fix logo spacing

--- a/assets/css/_navigation.scss
+++ b/assets/css/_navigation.scss
@@ -19,12 +19,12 @@ $hover-color: rgba(255,255,255,0.75);
 }
 
 .navbar-brand {
-  height: 40px;
+  height: 48px;
   width: 100px;
 }
 
 .navbar-brand svg {
-  width: 40px;
+  width: 48px;
   height: 30px;
 }
 .navbar-brand svg g {
